tests/semantic/valid/74_i8_attr_infer.hulk
class C {
    n = 0;
}

let c = new C() in print(c.n + 1);
