tests/semantic/invalid/31_e_undefined_type_new.hulk
let x = new Foo(1) in print(x);
